fixing bg color, trending grid size and other small layout problems

--- a/app/assets/stylesheets/shared/_footerBanner.scss
+++ b/app/assets/stylesheets/shared/_footerBanner.scss
@@ -22,8 +22,8 @@
 .footer-text-div {
   padding: 0;
   margin: 0;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  place-items: center;
   // align-items: flex-end;
   // min-height: 700px;
   // height: 700px;
