--- a/app/assets/stylesheets/shared/_homeCarousel.scss
+++ b/app/assets/stylesheets/shared/_homeCarousel.scss
@@ -2,6 +2,7 @@
 
 .home-carousel {
   height: 85vh;
+  background-color: white;
 }
 
 .carousel-img {
