--- a/app/assets/stylesheets/shared/_sectionTitle.scss
+++ b/app/assets/stylesheets/shared/_sectionTitle.scss
@@ -1,6 +1,7 @@
 .sections-container {
   display: grid;
   place-items: center;
+  background-color: white;
 }
 
 .sections-card {
