--- a/app/assets/stylesheets/shared/_trendingGrid.scss
+++ b/app/assets/stylesheets/shared/_trendingGrid.scss
@@ -25,7 +25,7 @@
 
 .trending-grid-imgs {
   width: 21vw;
-  height: 700px;
+  height: 620px;
   background-position: center;
   background-size: contain;
   // border: 2px solid black;
